[gd_scene load_steps=4 format=3 uid="uid://neg4o4inamak"]

[ext_resource type="Script" path="res://close_button.gd" id="1_tx8k0"]
[ext_resource type="Texture2D" uid="uid://dn8274n68kljo" path="res://Icons/x.svg" id="1_uoy6f"]
[ext_resource type="PackedScene" uid="uid://ck1fnu5p67hrb" path="res://close_popup.tscn" id="3_ny67k"]

[node name="Control" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1122.0
offset_bottom = -618.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.0901961, 0.368627, 1)
script = ExtResource("1_tx8k0")

[node name="X" type="Sprite2D" parent="."]
position = Vector2(15, 14)
texture = ExtResource("1_uoy6f")

[node name="ClosePopup" parent="." instance=ExtResource("3_ny67k")]
visible = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
